// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jZGBCk"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_14"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_15"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_16"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_17"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jZGBCk"
  id={null}
  rows="auto"
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_18"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_19"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_20"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_21"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_22"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_23"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_24"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_25"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_26"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_27"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_28"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_29"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jZGBCk"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_30"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_31"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_32"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_33"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_34"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_35"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_36"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_37"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_38"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_39"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_40"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_41"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 JROSu"
  id={null}
  rows="100px 3fr 1fr"
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_42"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_43"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_44"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_45"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_46"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_47"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_48"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_49"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_50"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_51"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_52"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_53"
    media=""
    onClick={null}
    placeholder="{ Card }"
  />
</section>
`;
